Login/Create length fix + Logo align

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,10 +3,11 @@
 }
 
 .logo {
-  height: 32px;
+  height: 50px;
+  /*width: 260px;*/
   margin: 16px;
   background: rgba(255, 255, 255, 0.2);
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .site-layout-sub-header-background {
